[tool.poetry]
name = "yar"
version = "0.1.0"
description = ""
authors = ["Teivaz <github@teivaz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg = {version = "^3.1.7", extras = ["binary"]}
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
